--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,23 +1,215 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment">
 
+ <View
+     android:id="@+id/top_view"
+     android:layout_width="match_parent"
+     android:layout_height="200dp"
+     android:background="@drawable/bq_view"/>
+ <GridLayout
+     android:layout_width="match_parent"
+     android:layout_height="match_parent"
+     android:layout_marginTop="-80dp"
+     android:rowCount="4"
+     android:layout_marginLeft="24dp"
+     android:layout_marginRight="25dp"
+     android:columnCount="2"
+  android:layout_below="@+id/top_view">
+  <androidx.cardview.widget.CardView
+   android:layout_width="150dp"
+      android:layout_columnWeight="1"
+      android:layout_rowWeight="1"
+      android:layout_row="1"
+      android:layout_margin="12dp"
+      android:layout_column="0"
+      app:cardCornerRadius="15dp"
+      android:elevation="12dp"
+   android:layout_height="150dp">
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+    android:orientation="vertical">
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        android:src="@drawable/baseline_videogame_asset_24"/>
     <TextView
-        android:id="@+id/text_home"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/app_login"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+     android:text="Amuzia"
+     android:layout_gravity="center_horizontal"
+     android:textSize="18sp"
+     android:textStyle="bold"
+     android:textColor="@color/black"/>
+
+   </LinearLayout>
+  </androidx.cardview.widget.CardView>
+  <androidx.cardview.widget.CardView
+      android:layout_width="150dp"
+      android:layout_columnWeight="1"
+      android:layout_margin="12dp"
+
+      android:layout_rowWeight="1"
+      android:layout_row="1"
+      android:layout_column="1"
+      app:cardCornerRadius="15dp"
+      android:elevation="12dp"
+
+      android:layout_height="150dp">
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:orientation="vertical">
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        android:src="@drawable/baseline_videogame_asset_24"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Amuzia"
+        android:layout_gravity="center_horizontal"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"/>
+
+   </LinearLayout>
+  </androidx.cardview.widget.CardView>
+  <androidx.cardview.widget.CardView
+      android:layout_width="150dp"
+      android:layout_margin="12dp"
+
+      android:layout_columnWeight="1"
+      android:layout_rowWeight="1"
+      android:layout_row="2"
+      android:layout_column="0"
+      app:cardCornerRadius="15dp"
+      android:elevation="12dp"
+
+      android:layout_height="150dp">
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:orientation="vertical">
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        android:src="@drawable/baseline_videogame_asset_24"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Amuzia"
+        android:layout_gravity="center_horizontal"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"/>
+
+   </LinearLayout>
+  </androidx.cardview.widget.CardView>
+  <androidx.cardview.widget.CardView
+      android:layout_width="150dp"
+      android:layout_columnWeight="1"
+      android:layout_margin="12dp"
+
+      android:layout_rowWeight="1"
+      android:layout_row="2"
+      android:layout_column="1"
+      app:cardCornerRadius="15dp"
+      android:elevation="12dp"
+
+      android:layout_height="150dp">
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:orientation="vertical">
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        android:src="@drawable/baseline_videogame_asset_24"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Amuzia"
+        android:layout_gravity="center_horizontal"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"/>
+
+   </LinearLayout>
+  </androidx.cardview.widget.CardView>
+  <androidx.cardview.widget.CardView
+      android:layout_width="150dp"
+      android:layout_margin="12dp"
+
+      android:layout_columnWeight="1"
+      android:layout_rowWeight="1"
+      android:layout_row="3"
+      android:layout_column="0"
+      app:cardCornerRadius="15dp"
+      android:elevation="12dp"
+
+      android:layout_height="150dp">
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:orientation="vertical">
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        android:src="@drawable/baseline_videogame_asset_24"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Amuzia"
+        android:layout_gravity="center_horizontal"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"/>
+
+   </LinearLayout>
+  </androidx.cardview.widget.CardView>
+  <androidx.cardview.widget.CardView
+      android:layout_width="150dp"
+      android:layout_margin="12dp"
+
+      android:layout_columnWeight="1"
+      android:layout_rowWeight="1"
+      android:layout_row="3"
+      android:layout_column="1"
+      app:cardCornerRadius="15dp"
+      android:elevation="12dp"
+
+      android:layout_height="150dp">
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:orientation="vertical">
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        android:src="@drawable/baseline_videogame_asset_24"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Amuzia"
+        android:layout_gravity="center_horizontal"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"/>
+
+   </LinearLayout>
+  </androidx.cardview.widget.CardView>
+ </GridLayout>
+
+</RelativeLayout>
