--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -29,10 +31,12 @@
       android:layout_column="0"
       app:cardCornerRadius="15dp"
       android:elevation="12dp"
+
    android:layout_height="150dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
+       android:gravity="center"
     android:orientation="vertical">
     <ImageView
         android:layout_width="80dp"
@@ -65,6 +69,7 @@
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
+       android:gravity="center"
        android:orientation="vertical">
     <ImageView
         android:layout_width="80dp"
@@ -97,7 +102,8 @@
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
-       android:orientation="vertical">
+       android:orientation="vertical"
+       android:gravity="center">
     <ImageView
         android:layout_width="80dp"
         android:layout_height="80dp"
@@ -127,6 +133,7 @@
 
       android:layout_height="150dp">
    <LinearLayout
+       android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
@@ -159,6 +166,7 @@
 
       android:layout_height="150dp">
    <LinearLayout
+       android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
@@ -191,6 +199,7 @@
 
       android:layout_height="150dp">
    <LinearLayout
+       android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
