--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,35 +22,40 @@
      android:layout_marginRight="25dp"
      android:columnCount="2"
   android:layout_below="@+id/top_view">
+
   <androidx.cardview.widget.CardView
-   android:layout_width="150dp"
-      android:layout_columnWeight="1"
-      android:layout_rowWeight="1"
+      android:layout_width="150dp"
+      android:layout_height="150dp"
       android:layout_row="1"
-      android:layout_margin="12dp"
+      android:layout_rowWeight="1"
       android:layout_column="0"
-      app:cardCornerRadius="15dp"
+      android:layout_columnWeight="1"
+      android:layout_margin="12dp"
       android:elevation="12dp"
 
-   android:layout_height="150dp">
+      android:onClick="openEvent"
+      app:cardCornerRadius="15dp">
+
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
-    android:orientation="vertical">
+       android:orientation="vertical">
+
     <ImageView
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_gravity="center"
-        android:src="@drawable/baseline_videogame_asset_24"/>
+        android:src="@drawable/baseline_videogame_asset_24" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-     android:text="Amuzia"
-     android:layout_gravity="center_horizontal"
-     android:textSize="18sp"
-     android:textStyle="bold"
-     android:textColor="@color/black"/>
+        android:layout_gravity="center_horizontal"
+        android:text="Amuzia"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
    </LinearLayout>
   </androidx.cardview.widget.CardView>
