--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,218 +12,244 @@
      android:id="@+id/top_view"
      android:layout_width="match_parent"
      android:layout_height="200dp"
-     android:background="@drawable/bq_view"/>
- <GridLayout
+     android:background="@drawable/bq_view" />
+
+ <ScrollView
      android:layout_width="match_parent"
-     android:layout_height="match_parent"
-     android:layout_marginTop="-80dp"
-     android:rowCount="4"
-     android:layout_marginLeft="24dp"
-     android:layout_marginRight="25dp"
-     android:columnCount="2"
-  android:layout_below="@+id/top_view">
+     android:layout_height="match_parent">
 
-  <androidx.cardview.widget.CardView
-      android:layout_width="150dp"
-      android:layout_height="150dp"
-      android:layout_row="1"
-      android:layout_rowWeight="1"
-      android:layout_column="0"
-      android:layout_columnWeight="1"
-      android:layout_margin="12dp"
-      android:elevation="12dp"
+  <GridLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginLeft="24dp"
+      android:layout_marginTop="80dp"
+      android:layout_marginRight="25dp"
+      android:columnCount="2"
+      android:rowCount="6">
 
-      android:onClick="openEvent"
-      app:cardCornerRadius="15dp">
+   <androidx.cardview.widget.CardView
+       android:layout_width="150dp"
+       android:layout_height="150dp"
+       android:layout_row="1"
+       android:layout_rowWeight="1"
+       android:layout_column="0"
+       android:layout_columnWeight="1"
+       android:layout_margin="12dp"
+       android:elevation="12dp"
 
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:gravity="center"
-       android:orientation="vertical">
+       android:onClick="openEvent"
+       app:cardCornerRadius="15dp">
 
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_gravity="center"
-        android:src="@drawable/baseline_videogame_asset_24" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="Amuzia"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+     <ImageView
+         android:layout_width="80dp"
+         android:layout_height="80dp"
+         android:layout_gravity="center"
+         android:src="@drawable/baseline_videogame_asset_24" />
 
-   </LinearLayout>
-  </androidx.cardview.widget.CardView>
-  <androidx.cardview.widget.CardView
-      android:layout_width="150dp"
-      android:layout_columnWeight="1"
-      android:layout_margin="12dp"
+     <TextView
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_gravity="center_horizontal"
+         android:text="Amuzia"
+         android:textColor="@color/black"
+         android:textSize="18sp"
+         android:textStyle="bold" />
 
-      android:layout_rowWeight="1"
-      android:layout_row="1"
-      android:layout_column="1"
-      app:cardCornerRadius="15dp"
-      android:elevation="12dp"
+    </LinearLayout>
+   </androidx.cardview.widget.CardView>
 
-      android:layout_height="150dp">
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:gravity="center"
-       android:orientation="vertical">
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_gravity="center"
-        android:src="@drawable/baseline_videogame_asset_24"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Amuzia"
-        android:layout_gravity="center_horizontal"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"/>
+   <androidx.cardview.widget.CardView
+       android:layout_width="150dp"
+       android:layout_height="150dp"
+       android:layout_row="1"
 
-   </LinearLayout>
-  </androidx.cardview.widget.CardView>
-  <androidx.cardview.widget.CardView
-      android:layout_width="150dp"
-      android:layout_margin="12dp"
+       android:layout_rowWeight="1"
+       android:layout_column="1"
+       android:layout_columnWeight="1"
+       android:layout_margin="12dp"
+       android:elevation="12dp"
 
-      android:layout_columnWeight="1"
-      android:layout_rowWeight="1"
-      android:layout_row="2"
-      android:layout_column="0"
-      app:cardCornerRadius="15dp"
-      android:elevation="12dp"
+       app:cardCornerRadius="15dp">
 
-      android:layout_height="150dp">
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:orientation="vertical"
-       android:gravity="center">
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_gravity="center"
-        android:src="@drawable/baseline_videogame_asset_24"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Amuzia"
-        android:layout_gravity="center_horizontal"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
 
-   </LinearLayout>
-  </androidx.cardview.widget.CardView>
-  <androidx.cardview.widget.CardView
-      android:layout_width="150dp"
-      android:layout_columnWeight="1"
-      android:layout_margin="12dp"
+     <ImageView
+         android:layout_width="80dp"
+         android:layout_height="80dp"
+         android:layout_gravity="center"
+         android:src="@drawable/baseline_videogame_asset_24" />
 
-      android:layout_rowWeight="1"
-      android:layout_row="2"
-      android:layout_column="1"
-      app:cardCornerRadius="15dp"
-      android:elevation="12dp"
+     <TextView
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_gravity="center_horizontal"
+         android:text="Amuzia"
+         android:textColor="@color/black"
+         android:textSize="18sp"
+         android:textStyle="bold" />
 
-      android:layout_height="150dp">
-   <LinearLayout
-       android:gravity="center"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:orientation="vertical">
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_gravity="center"
-        android:src="@drawable/baseline_videogame_asset_24"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Amuzia"
-        android:layout_gravity="center_horizontal"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"/>
+    </LinearLayout>
+   </androidx.cardview.widget.CardView>
 
-   </LinearLayout>
-  </androidx.cardview.widget.CardView>
-  <androidx.cardview.widget.CardView
-      android:layout_width="150dp"
-      android:layout_margin="12dp"
+   <androidx.cardview.widget.CardView
+       android:layout_width="150dp"
+       android:layout_height="150dp"
 
-      android:layout_columnWeight="1"
-      android:layout_rowWeight="1"
-      android:layout_row="3"
-      android:layout_column="0"
-      app:cardCornerRadius="15dp"
-      android:elevation="12dp"
+       android:layout_row="2"
+       android:layout_rowWeight="1"
+       android:layout_column="0"
+       android:layout_columnWeight="1"
+       android:layout_margin="12dp"
+       android:elevation="12dp"
 
-      android:layout_height="150dp">
-   <LinearLayout
-       android:gravity="center"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:orientation="vertical">
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_gravity="center"
-        android:src="@drawable/baseline_videogame_asset_24"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Amuzia"
-        android:layout_gravity="center_horizontal"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"/>
+       app:cardCornerRadius="15dp">
 
-   </LinearLayout>
-  </androidx.cardview.widget.CardView>
-  <androidx.cardview.widget.CardView
-      android:layout_width="150dp"
-      android:layout_margin="12dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
 
-      android:layout_columnWeight="1"
-      android:layout_rowWeight="1"
-      android:layout_row="3"
-      android:layout_column="1"
-      app:cardCornerRadius="15dp"
-      android:elevation="12dp"
+     <ImageView
+         android:layout_width="80dp"
+         android:layout_height="80dp"
+         android:layout_gravity="center"
+         android:src="@drawable/baseline_videogame_asset_24" />
 
-      android:layout_height="150dp">
-   <LinearLayout
-       android:gravity="center"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:orientation="vertical">
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_gravity="center"
-        android:src="@drawable/baseline_videogame_asset_24"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Amuzia"
-        android:layout_gravity="center_horizontal"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"/>
+     <TextView
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_gravity="center_horizontal"
+         android:text="Amuzia"
+         android:textColor="@color/black"
+         android:textSize="18sp"
+         android:textStyle="bold" />
 
-   </LinearLayout>
-  </androidx.cardview.widget.CardView>
- </GridLayout>
+    </LinearLayout>
+   </androidx.cardview.widget.CardView>
+
+   <androidx.cardview.widget.CardView
+       android:layout_width="150dp"
+       android:layout_height="150dp"
+       android:layout_row="2"
+
+       android:layout_rowWeight="1"
+       android:layout_column="1"
+       android:layout_columnWeight="1"
+       android:layout_margin="12dp"
+       android:elevation="12dp"
+
+       app:cardCornerRadius="15dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
+
+     <ImageView
+         android:layout_width="80dp"
+         android:layout_height="80dp"
+         android:layout_gravity="center"
+         android:src="@drawable/baseline_videogame_asset_24" />
+
+     <TextView
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_gravity="center_horizontal"
+         android:text="Amuzia"
+         android:textColor="@color/black"
+         android:textSize="18sp"
+         android:textStyle="bold" />
+
+    </LinearLayout>
+   </androidx.cardview.widget.CardView>
+
+   <androidx.cardview.widget.CardView
+       android:layout_width="150dp"
+       android:layout_height="150dp"
+
+       android:layout_row="3"
+       android:layout_rowWeight="1"
+       android:layout_column="0"
+       android:layout_columnWeight="1"
+       android:layout_margin="12dp"
+       android:elevation="12dp"
+
+       app:cardCornerRadius="15dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
+
+     <ImageView
+         android:layout_width="80dp"
+         android:layout_height="80dp"
+         android:layout_gravity="center"
+         android:src="@drawable/baseline_videogame_asset_24" />
+
+     <TextView
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_gravity="center_horizontal"
+         android:text="Amuzia"
+         android:textColor="@color/black"
+         android:textSize="18sp"
+         android:textStyle="bold" />
+
+    </LinearLayout>
+   </androidx.cardview.widget.CardView>
+
+   <androidx.cardview.widget.CardView
+       android:layout_width="150dp"
+       android:layout_height="150dp"
+
+       android:layout_row="3"
+       android:layout_rowWeight="1"
+       android:layout_column="1"
+       android:layout_columnWeight="1"
+       android:layout_margin="12dp"
+       android:elevation="12dp"
+
+       app:cardCornerRadius="15dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
+
+     <ImageView
+         android:layout_width="80dp"
+         android:layout_height="80dp"
+         android:layout_gravity="center"
+         android:src="@drawable/baseline_videogame_asset_24" />
+
+     <TextView
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_gravity="center_horizontal"
+         android:text="Amuzia"
+         android:textColor="@color/black"
+         android:textSize="18sp"
+         android:textStyle="bold" />
+
+    </LinearLayout>
+   </androidx.cardview.widget.CardView>
+
+  </GridLayout>
+ </ScrollView>
 
 </RelativeLayout>
